remove Ctrl-F9 mapping

--- a/dosbox.conf
+++ b/dosbox.conf
@@ -1,3 +1,13 @@
+#[sdl]
+#fullresolution=desktop
+#fulldouble=true
+#output=overlay
+#windowresolution=3440x1440
+#
+#[render]
+#aspec=true
+#scalar=none
+
 [autoexec]
 # Lines in this section will be run at startup.
 # You can put your MOUNT lines here.
