--- a/dosbox.conf
+++ b/dosbox.conf
@@ -1,19 +1,8 @@
-#[sdl]
-#fullresolution=desktop
-#fulldouble=true
-#output=overlay
-#windowresolution=3440x1440
-#
-#[render]
-#aspec=true
-#scalar=none
-
 [autoexec]
-# Lines in this section will be run at startup.
-# You can put your MOUNT lines here.
 mount c ~/dev/dos-games
 mount d ~/dev/dos-hello
 mount t ~/dev/dos-tools
 mount s ~/dev/dos-sierra
-path z:\;t:\tp\bin;t:\tc\bin
+mount a /home/ollisg/dev/dos-tools/tmp/xtgold
+path z:\;t:\tp\bin;t:\tc\bin;t:\tb;t:\tasm\bin;t:\bin
 d:
